# DAMS

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  am.conf  configure  configure.ac  libtool
dams_makedic/: Makefile.am  Makefile.in  aliastree.cpp  aliastree.h  check.cpp  clean.cpp  clearall.cpp  dam.cpp  dam.h  dams_makedic  getparent.cpp  headers.h  lmatch.cpp  main.cpp  makealias.cpp  makestatics.cpp  maketree.cpp  maketry.cpp  proc.cpp  readcsv.cpp  retrieve.cpp  strlib.cpp  tmplhash.h  tmpltry.h  tmplvect.h  try.cpp  try.h  writebin.cpp  writetree.cpp
include/: Makefile.am  Makefile.in  config.h  config.h.in  dams.h
lib/: DamsWrapper.cpp  Makefile.am  Makefile.in  MatchNodeResult.h  dam.cpp  dam.h  generate_itaijicpp  generate_itaijicpp.cpp  iconv_converter.cpp  iconv_converter.h  itaiji.cpp  itaiji.cpp.in  itaiji.euc  libdams.h  lmatch.cpp  openfile.cpp  strlib.h  tmplvect.h  try.cpp  try.h
php-extension/: Makefile.am  Makefile.in  phpdams.ini  phpdams.xml
php-extension/tests/: sample.php
src/: Makefile.am  Makefile.in  dams.cpp
