include $(top_srcdir)/am.conf
noinst_PROGRAMS = dams_makedic
dams_makedic_SOURCES	= aliastree.h dam.h headers.h strlib.h \
  tmplhash.h tmpltry.h tmplvect.h try.h \
  aliastree.cpp check.cpp clean.cpp clearall.cpp dam.cpp \
  getparent.cpp lmatch.cpp main.cpp makealias.cpp \
  makestatics.cpp maketree.cpp maketry.cpp proc.cpp \
  readcsv.cpp retrieve.cpp strlib.cpp try.cpp \
  writebin.cpp writetree.cpp
dams_makedic_LDADD	= $(LIBDAMS)

